--- a/codigo/home.html
+++ b/codigo/home.html
@@ -34,20 +34,15 @@
     <div id="experiencia" class="main-section">
         <h2>Experiência Profissional</h2>
         <div class="job">
-            <h3>Empresa 1</h3>
-            <p><strong>Cargo | Período:</strong> Descrição breve das responsabilidades e realizações.</p>
-        </div>
-        <div class="job">
-            <h3>Empresa 2</h3>
-            <p><strong>Cargo | Período:</strong> Descrição breve das responsabilidades e realizações.</p>
+            <p>Embora eu ainda não tenha experiência formal em outras empresas, sou altamente motivado e dedicado a aprender e me desenvolver profissionalmente. Estou comprometido em superar desafios e pronto para assumir responsabilidades diversas para adquirir conhecimento e habilidades. Minha paixão por tecnologia e minha disposição para enfrentar novos desafios são os principais impulsionadores da minha jornada. Estou pronto para contribuir com minha energia e entusiasmo para alcançar resultados positivos e crescer dentro da sua equipe.</p>
         </div>
     </div>
 
     <div id="formacao" class="main-section">
         <h2>Formação Acadêmica</h2>
         <div class="education">
-            <h3>Curso - Instituição</h3>
-            <p><strong>Ano de Conclusão:</strong> Descrição breve do curso e principais realizações.</p>
+            <h3>Curso: Sistemas de Informação - PUC Minas</h3>
+            <p><strong>Ano de Conclusão:</strong> 22/12/2027</p>
         </div>
     </div>
 
@@ -68,10 +63,10 @@
     <div id="contato" class="main-section">
         <h2>Contato</h2>
         <ul class="contact-info">
-            <li><strong>Email:</strong> seu.email@example.com</li>
-            <li><strong>Telefone:</strong> (XX) XXXX-XXXX</li>
-            <li><strong>LinkedIn:</strong> <a href="#">Seu LinkedIn</a></li>
-            <li><strong>GitHub:</strong> <a href="#">Seu GitHub</a></li>
+            <li><strong>Email:</strong> marcopedrop61@gmail.com</li>
+            <li><strong>Telefone:</strong> (33)991331800</li>
+            <li><strong>LinkedIn:</strong> <a href="#">www.linkedin.com/in/pedro-henrique-domingues-33613</a></li>
+            <li><strong>GitHub:</strong> <a href="#">https://github.com/MarcoPedroP</a></li>
         </ul>
     </div>
 </div>
