--- a/codigo/home.html
+++ b/codigo/home.html
@@ -56,6 +56,7 @@
             <li>Habilidades em marketing</li>
             <li>Motivação para o aprendizado e desenvolvimento constantes</li>
             <li>Conhecimentos básicos de informática</li>
+            <li>Inglês intermediario</li>
             
         </ul>
     </div>
