--- a/codigo/home.html
+++ b/codigo/home.html
@@ -82,6 +82,7 @@
         <ul class="skills-list">
             <li>Curso de Desenvolvimento Web - Alura</li>
             <li>Curso de C# - Alura</li>
+            <li>Curso de Montagem e manutenção de computadores - Hardware Redes Brasil </li>
         </ul>
     </div>
 
